# project_camille

./: README.md  pyproject.toml  scripts.py  startup.sh
.github/workflows/: main_project-cams.yml
project_camille/: __main__.py  app.py  main.db  main.py
project_camille/templates/: fail.html  home.html  key.html  login.html  login_response.html  success.html  treasure.html
project_camille/templates/components/: footer.html  header.html  navbar.html
