[tool.poetry]
name = "project_camille"
version = "0.1.0"
description = ""
authors = ["felixcapuano <felix.capuano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "scripts:dev"
make_db = "scripts:make_db"
